--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
       <version>1.2.58</version>
-      <scope>provided</scope>
+<!--      <scope>provided</scope>-->
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
