--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,94 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>club.easyutils</groupId>
+  <!-- 基本信息 -->
+  <groupId>club.easy-utils</groupId>
   <artifactId>easy-wepay</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <version>0.0.1-SNAOSHOT</version>
 
-  <name>easy-wepay</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <!-- 描述信息 -->
+  <name>Easy WePay</name>
+  <url>https://easy-utils.club</url>
+  <description>
+    A easy way to connect with Wechat Payment Background Interface for developer.
+  </description>
+  <!-- 项目成立年份，非必须 -->
+  <inceptionYear>2020</inceptionYear>
+
+  <!-- 许可证 -->
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <!-- 仓库地址 -->
+  <scm>
+    <tag>master</tag>
+    <url>https://github.com/easy-utils/easy-wepay</url>
+    <connection>https://github.com/easy-utils/easy-wepay.git</connection>
+    <developerConnection>https://github.com/easy-utils/easy-wepay.git</developerConnection>
+  </scm>
+
+  <!-- 问题管理系统 -->
+  <issueManagement>
+    <system>GitHub Issue Management</system>
+    <url>https://github.com/easy-utils/easy-wepay/issues</url>
+  </issueManagement>
+
+  <!-- 发布管理，要想发布到中央库就必须要配置的一个节点，以下两个链接可以从issue审核结果中找到 -->
+  <!-- 其中id为自定义，后面会在maven/config/settings.xml中配置对应的服务器信息 -->
+      <distributionManagement>
+          <snapshotRepository>
+              <id>sonatype</id>
+              <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+          </snapshotRepository>
+          <repository>
+              <id>sonatype</id>
+              <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+          </repository>
+      </distributionManagement>
+<!--  <distributionManagement>-->
+<!--    <repository>-->
+<!--      <id>easy-wepay</id>-->
+<!--      <name>easy wepay</name>-->
+<!--      <url>https://maven.pkg.github.com/easy-utils/easy-wepay</url>-->
+<!--    </repository>-->
+<!--  </distributionManagement>-->
+
+  <!-- 开发者列表，个人的话就写自己，团队就罗列所有成员 -->
+  <developers>
+    <developer>
+      <name>rainyblossom</name>
+      <email>rainyblossom@163.com</email>
+      <timezone>GMT+8</timezone>
+      <url>https://github.com/rainyblossom</url>
+    </developer>
+  </developers>
 
   <properties>
+    <java.version>1.8</java.version>
+    <java.home>/Library/Java/JavaVirtualMachines/jdk1.8.0_231.jdk/Contents/Home</java.home>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+
+    <license.licenseName>apache_v2</license.licenseName>
+    <license.verbose>false</license.verbose>
+    <license.failOnMissing>true</license.failOnMissing>
+    <license.failOnUnknown>true</license.failOnUnknown>
+    <license.failIfWarning>true</license.failIfWarning>
+    <license.failOnForbidden>true</license.failOnForbidden>
+    <license.organizationName>${project.name}</license.organizationName>
+    <license.sectionDelimiter>#</license.sectionDelimiter>
+    <license.processStartTag>Start tag</license.processStartTag>
+    <license.processEndTag>End tag</license.processEndTag>
   </properties>
+
 
   <dependencies>
 
@@ -81,57 +154,100 @@
   </dependencies>
 
   <build>
-    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
-        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>2.5.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
-        <plugin>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.7.1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
     <plugins>
+      <!-- 打包时跳过测试 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>8</source>
-          <target>8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <encoding>UTF-8</encoding>
         </configuration>
+      </plugin>
+      <!-- 以下都为上传jar默认配置不做修改 -->
+      <plugin>
+          <groupId>org.sonatype.plugins</groupId>
+          <artifactId>nexus-staging-maven-plugin</artifactId>
+          <version>1.6.8</version>
+          <!-- autoReleaseAfterClose的值为true，则脚本会自动完成在平台上close、release的操作，至此你将成功发布了 -->
+          <extensions>true</extensions>
+          <configuration>
+              <serverId>sonatype</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+          </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
+        <configuration>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
+          <releaseProfiles>release</releaseProfiles>
+          <goals>deploy</goals>
+        </configuration>
+      </plugin>
+
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.5</version>
+          <executions>
+              <execution>
+                  <id>sign-artifacts</id>
+                  <phase>verify</phase>
+                  <goals>
+                      <goal>sign</goal>
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.9</version>
+          <executions>
+              <execution>
+                  <id>attach-javadocs</id>
+                  <goals>
+                      <goal>jar</goal>
+                  </goals>
+                  <!-- JDK8必须使用下面的配置 -->
+                  <configuration>
+                      <encoding>UTF-8</encoding>
+                      <charset>UTF-8</charset>
+                      <additionalparam>-Xdoclint:none</additionalparam>
+                      <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                  </configuration>
+              </execution>
+          </executions>
       </plugin>
     </plugins>
   </build>
