--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <java.home>/Library/Java/JavaVirtualMachines/jdk1.8.0_231.jdk/Contents/Home</java.home>
+    <java.home>/Library/Java/JavaVirtualMachines/adoptopenjdk-8.jdk/Contents/Home</java.home>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <license.licenseName>apache_v2</license.licenseName>
@@ -150,6 +150,12 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.moxy</artifactId>
+      <version>2.7.0-RC1</version>
     </dependency>
   </dependencies>
 
