--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <groupId>club.easy-utils</groupId>
   <artifactId>easy-wepay</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1-SNAOSHOT</version>
+  <version>0.0.3-SNAPSHOT</version>
 
   <!-- 描述信息 -->
   <name>Easy WePay</name>
@@ -45,16 +45,16 @@
 
   <!-- 发布管理，要想发布到中央库就必须要配置的一个节点，以下两个链接可以从issue审核结果中找到 -->
   <!-- 其中id为自定义，后面会在maven/config/settings.xml中配置对应的服务器信息 -->
-      <distributionManagement>
-          <snapshotRepository>
-              <id>sonatype</id>
-              <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-          </snapshotRepository>
-          <repository>
-              <id>sonatype</id>
-              <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-          </repository>
-      </distributionManagement>
+<!--      <distributionManagement>-->
+<!--          <snapshotRepository>-->
+<!--              <id>sonatype</id>-->
+<!--              <url>https://oss.sonatype.org/content/repositories/snapshots</url>-->
+<!--          </snapshotRepository>-->
+<!--          <repository>-->
+<!--              <id>sonatype</id>-->
+<!--              <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
+<!--          </repository>-->
+<!--      </distributionManagement>-->
 <!--  <distributionManagement>-->
 <!--    <repository>-->
 <!--      <id>easy-wepay</id>-->
@@ -62,6 +62,19 @@
 <!--      <url>https://maven.pkg.github.com/easy-utils/easy-wepay</url>-->
 <!--    </repository>-->
 <!--  </distributionManagement>-->
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>nexus-releases</name>
+            <url>http://itcentral.baozun.cn/nexus/content/repositories/releases/</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>nexus-snapshots</name>
+            <url>http://itcentral.baozun.cn/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
   <!-- 开发者列表，个人的话就写自己，团队就罗列所有成员 -->
   <developers>
